--- a/experiment_configs/16x16_mnist.yaml
+++ b/experiment_configs/16x16_mnist.yaml
@@ -1,5 +1,6 @@
 dataset: 16x16_mnist
 neuron_params:
+  activation: alpha_equaltime
   g_leak: 1.0
   leak: 0.0
   tau_syn: 1.0
@@ -37,7 +38,6 @@ training_params:
   torch_seed: 2345
   training_noise: {mean: 0.0, std_dev: 0.3}
   use_forward_integrator: false
-  use_hicannx: false
   weight_bumping_exp: true
   weight_bumping_targeted: true
   weight_bumping_value: 0.0005
