--- a/experiment_configs/bars_default.yaml
+++ b/experiment_configs/bars_default.yaml
@@ -1,5 +1,6 @@
 dataset: bars
 neuron_params:
+  activation: alpha_equaltime
   g_leak: 1.0
   leak: 0.0
   tau_syn: 1.0
@@ -35,7 +36,6 @@ training_params:
   torch_seed: 61231231
   training_noise: false
   use_forward_integrator: false
-  use_hicannx: false
   weight_bumping_exp: true
   weight_bumping_targeted: true
   weight_bumping_value: 0.005
