--- a/experiment_configs/xor.yaml
+++ b/experiment_configs/xor.yaml
@@ -1,5 +1,6 @@
 dataset: xor
 neuron_params:
+  activation: linear
   g_leak: 1.0
   leak: 0.0
   tau_syn: 1.0
@@ -33,7 +34,6 @@ training_params:
   torch_seed: 2000
   training_noise: {mean: 0.0, std_dev: 0.2}
   use_forward_integrator: false
-  use_hicannx: false
   weight_bumping_exp: true
   weight_bumping_targeted: true
   weight_bumping_value: 0.0005
