--- a/experiment_configs/xor_alpha.yaml
+++ b/experiment_configs/xor_alpha.yaml
@@ -1,31 +1,30 @@
-dataset: yin_yang
+dataset: xor
 neuron_params:
+  activation: alpha_equaltime
   g_leak: 1.0
   leak: 0.0
   tau_syn: 1.0
   threshold: 1.0
 network_layout:
-  bias_times: [[0.9, ], []]
-  layer_sizes: [120, 3]
-  n_biases: [1, 0]
+  bias_times: [0.9]
+  layer_sizes: [10, 2]
+  n_biases: [1, 1]
   n_inputs: 4
   n_layers: 2
-  weight_means: [0.100, 0.075]
-  weight_stdevs: [0.12, 0.15]
+  weight_means: [1.5, 0.5]
+  weight_stdevs: [0.8, 0.8]
 training_params:
-  batch_size: 40
+  alpha: 0.005
+  batch_size: 150
   batch_size_eval: 200
+  beta: 1.
   enforce_cpu: False
   epoch_number: 300
-  epoch_snapshots: [1, 5, 10, 15, 50, 100, 150, 200, 300]
-  learning_rate: 0.002
-  loss:
-    type: MSE
-    t_correct: 1.9
-    t_wrong: 1.6
+  epoch_snapshots: [100, 200]
+  learning_rate: 0.005
   lr_scheduler: {gamma: 0.95, step_size: 20, type: StepLR}
   max_dw_norm: 0.2
-  max_num_missing_spikes: [0.3, 0.05]
+  max_num_missing_spikes: [0.3, 0.0]
   momentum: 0
   numpy_seed: 12345
   optimizer: adam
@@ -33,9 +32,9 @@ training_params:
   resolution: 0.01
   sim_time: 4.0
   torch_seed: 2000
-  training_noise: false
+  training_noise: {mean: 0.0, std_dev: 0.2}
   use_forward_integrator: false
-  use_hicannx: true
   weight_bumping_exp: true
   weight_bumping_targeted: true
   weight_bumping_value: 0.0005
+  xi: 0.2
