--- a/experiment_configs/yin_yang.yaml
+++ b/experiment_configs/yin_yang.yaml
@@ -1,5 +1,6 @@
 dataset: yin_yang
 neuron_params:
+  activation: linear
   g_leak: 1.0
   leak: 0.0
   tau_syn: 1.0
@@ -35,7 +36,6 @@ training_params:
   torch_seed: 2000
   training_noise: false
   use_forward_integrator: false
-  use_hicannx: false
   weight_bumping_exp: true
   weight_bumping_targeted: true
   weight_bumping_value: 0.0005
