--- a/experiment_configs/xor.yaml
+++ b/experiment_configs/xor.yaml
@@ -7,6 +7,8 @@ neuron_params:
   threshold: 1.0
 network_layout:
   bias_times: [0.9]
+  delay_means : [0.1, 0.1]
+  delay_stdevs: [0.01, 0.01]
   layer_sizes: [10, 2]
   n_biases: [1, 1]
   n_inputs: 4
@@ -31,6 +33,7 @@ training_params:
   print_step_percent: 5.0
   resolution: 0.01
   sim_time: 4.0
+  train_delay: true
   torch_seed: 2000
   training_noise: {mean: 0.0, std_dev: 0.2}
   use_forward_integrator: false
