--- a/experiment_configs/xor_alpha.yaml
+++ b/experiment_configs/xor_alpha.yaml
@@ -7,6 +7,8 @@ neuron_params:
   threshold: 1.0
 network_layout:
   bias_times: [0.9]
+  delay_means : [0.0, 0.0]
+  delay_stdevs: [0.0, 0.0]
   layer_sizes: [10, 2]
   n_biases: [1, 1]
   n_inputs: 4
@@ -32,6 +34,7 @@ training_params:
   resolution: 0.01
   sim_time: 4.0
   torch_seed: 2000
+  train_delay: false
   training_noise: {mean: 0.0, std_dev: 0.2}
   use_forward_integrator: false
   weight_bumping_exp: true
