--- a/experiment_configs/16x16_mnist.yaml
+++ b/experiment_configs/16x16_mnist.yaml
@@ -20,7 +20,7 @@ training_params:
   batch_size_eval: 50
   enforce_cpu: false
   epoch_number: 200
-  epoch_snapshots: [1, ]
+  epoch_snapshots: [1, 3, 5, 10, 20, 50, 100]
   learning_rate: 0.003
   loss:
     type: MSE
