--- a/experiment_configs/xor.yaml
+++ b/experiment_configs/xor.yaml
@@ -9,6 +9,8 @@ network_layout:
   bias_times: [0.9]
   delay_means : [0.1, 0.1]
   delay_stdevs: [0.01, 0.01]
+  threshold_means : [1, 1]
+  threshold_stdevs: [0.0, 0.0]
   layer_sizes: [10, 2]
   n_biases: [1, 1]
   n_inputs: 4
@@ -20,7 +22,8 @@ training_params:
   batch_size: 150
   batch_size_eval: 200
   beta: 1.
-  enforce_cpu: False
+  enforce_cpu: True
+  enforce_mps: False
   epoch_number: 300
   epoch_snapshots: [100, 200]
   learning_rate: 0.005
@@ -34,6 +37,7 @@ training_params:
   resolution: 0.01
   sim_time: 4.0
   train_delay: true
+  train_threshold: false
   torch_seed: 2000
   training_noise: {mean: 0.0, std_dev: 0.2}
   use_forward_integrator: false
