Enforce positivity of delays, save all trained parameters in results folder

--- a/experiment_configs/yin_yang.yaml
+++ b/experiment_configs/yin_yang.yaml
@@ -7,8 +7,10 @@ neuron_params:
   threshold: 1.0
 network_layout:
   bias_times: [0.9]
-  delay_means : [0., 0.]
-  delay_stdevs: [0., 0.]
+  #delay_means : [0.1, 0.1]
+  delay_means: [-2.3, -2.3]
+  #delay_stdevs: [0.01, 0.01]
+  delay_stdevs: [0.5, 0.5]
   threshold_means : [1, 1]
   threshold_stdevs: [0.1, 0.1]
   layer_sizes: [120, 3]
@@ -38,8 +40,9 @@ training_params:
   print_step_percent: 5.0
   resolution: 0.01
   sim_time: 4.0
+  substitute_delay: true
   torch_seed: 2000
-  train_delay: false
+  train_delay: true
   train_threshold: true
   training_noise: false
   use_forward_integrator: false
