--- a/experiment_configs/yin_yang.yaml
+++ b/experiment_configs/yin_yang.yaml
@@ -16,7 +16,7 @@ network_layout:
   # delay_stdevs: [0.01, 0.01]
   delay_stdevs: [0.5, 0.5]
   # delay_stdevs: [0.0, 0.0]
-  threshold_means : [1, 1]
+  threshold_means : [1., 1.]
   # threshold_stdevs: [0.1, 0.1]
   threshold_stdevs: [0., 0.]
   layer_sizes: [120, 3]
@@ -55,7 +55,7 @@ training_params:
   train_delay: true
   train_threshold: false
   training_noise: false
-  use_forward_integrator: true
+  use_forward_integrator: false
   weight_bumping_exp: true
   weight_bumping_targeted: true
   weight_bumping_value: 0.0005
