--- a/experiment_configs/xor.yaml
+++ b/experiment_configs/xor.yaml
@@ -23,7 +23,7 @@ training_params:
   batch_size: 150
   batch_size_eval: 200
   beta: 1.
-  enforce_cpu: True
+  enforce_cpu: true
   enforce_mps: False
   epoch_number: 300
   epoch_snapshots: [100, 200]
